# Validations/signUp-Validation.js
@@ -5,7 +5,7 @@ const signUpValidation = (data) => {
     const schema = Joi.object({
         FirstName: Joi.string().min(2).required(),
         LastName: Joi.string().min(2).required(),
-        UserName: Joi.string().min(2).required(),
+        UserName: Joi.string().min(6).required(),
         Email: Joi.string().min(6).required().email(),
         Password: Joi.string().min(6).required()
     });
@@ -14,7 +14,7 @@ const signUpValidation = (data) => {
 
 const loginValidation = (data) => {
     const schema = Joi.object({
-        Email: Joi.string().min(6).required().email(),
+        UserName: Joi.string().min(6).required(),
         Password: Joi.string().min(6).required()
     });
     return schema.validate(data)
